--- a/naver.html
+++ b/naver.html
@@ -3,3 +3,13 @@
 <input type="password" placeholder="비밀번호"/>
 <button>로그인</button>
 <input type="check"/> 로그인 상태 유지
+
+<div class="기사">
+    <div class="기사 제목">
+        <h1>바이든 시대 5대 수출 유망분야는 신재생 에너지,전기차,바이오헬스,디지털전환,홈리빙</h1>
+    </div>
+    <div class="기사 내용">
+        <img src="이미지 주소"/>
+        <p>[파이낸셜뉴스] 미국의 바이든 행정부 출범으로..</p>
+    </div>
+</div>
