--- a/클론코딩/index.html
+++ b/클론코딩/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="header.css">
     <style>
         header{
-            background:lightgray;
+            /* background:lightgray; */
             height:220px;
         }
         main{
@@ -29,7 +29,7 @@
             <a href="/" class="link_text">주니어네이버</a>
             <a href="/" class="link_text">해피빈</a>
         </div>
-        <a href="/"><img src="images/naver_logo.png" class="img_logo"/></a>
+        <a href="/"><img src="images/naver1_logo.png" class="img_logo"/></a>
         <form>
             <fieldset>
                 <legend class="visually-hidden">검색</legend>
@@ -64,7 +64,7 @@
                 </ul>
                 <div class="keyword">
                     <span class="color_naver">1</span>
-                    <span>Eoldam spark</span>
+                    <span>정찬진</span>
                 </div>
             </div>
         </nav>
