--- a/클론코딩/index.html
+++ b/클론코딩/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>레이아웃 나누기</title>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="header.css">    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
     <style>
         header{
             /* background:lightgray; */
@@ -17,8 +18,8 @@
             /*처음 레이아웃 잡을 땐 min-height 유용*/
         }
         footer{
-            background:darkgray;
-            height:300px;
+            /* background:darkgray; */
+            /* height:300px; */
         }
     </style>
 </head>
@@ -76,59 +77,66 @@
     <main>메인</main>
     <footer>
         <div class="notice_box">
-            <a href="/">공지사항</a>
-            <a href="/">서비스 전체보기</a>
+          <a href="/">공지사항</a>
+          <a href="/">서비스 전체보기></a>
         </div>
         <div class="aside_box">
-            <div class="area_user">
-                <div class="area_user_row">
-                    <span class="text_bold-13">Creators</span>
-                    <ul>
-                        <li><a href="/">크리에이터</a></li>
-                        <li><a href="/">스몰비즈니스</a></li>
-                    </ul>
-                </div>
-                <div class="area_user_low">
-                    <span class="text_bold-13">Partners</span>
-                    <ul>
-                        <li><a href="/">비즈니스 광고</a></li>
-                        <li><a href="/">스토어 개설</a></li>
-                        <li><a href="/">지역업체 등록</a></li>
-                    </ul>
-                </div>
-                <div class="area_user_low">
-                    <span class="text_bold-13">Developers</span>
-                    <ul>
-                        <li><a href="/">네이버 개발자센터</a></li>
-                        <li><a href="/">오픈API</a></li>
-                        <li><a href="/"></a>오픈소스</li>
-                        <li><a href="/"></a>네이버 D2</li>
-                        <li><a href="/"></a>네이버 D2SF</li>
-                        <li><a href="/"></a>네이버 랩스</li>
-                    </ul>
-                </div>
+          <div class="area_user">
+            <div class="area_user_row">
+              <span class="text_bold-13">Creators</span>
+              <ul>
+                <li><a href="/">크리에이터</a></li>
+                <li><a href="/">스몰비즈니스</a></li>
+              </ul>
             </div>
-            <div class="area_col">
-                <div class="ac_content">
-                    <div class="text-bold-13">웨일 브라우저</div>
-                    <div class="ac_link"><a href="/">다운받기</a></div>
-                </div>
-                <a href="/"><img src="images/icon_whale.png" class="ac_img"></a>
+            <div class="area_user_row">
+              <span class="text_bold-13">Partners</span>
+              <ul>
+                <li><a href="/">비즈니스 광고</a></li>
+                <li><a href="/">스토어 개설</a></li>
+                <li><a href="/">지역업체 등록</a></li>
+              </ul>
             </div>
+            <div class="area_user_row">
+              <span class="text_bold-13">Developers</span>
+              <ul>
+                <li><a href="/">네이버 개발자센터</a></li>
+                <li><a href="/">오픈API</a></li>
+                <li><a href="/">오픈소스</a></li>
+                <li><a href="/">네이버 D2</a></li>
+                <li><a href="/">네이버 D2SF</a></li>
+                <li><a href="/">네이버 랩스</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="area_col">
+            <div class="ac_content">
+              <div class="text_bold-13">웨일 브라우저</div>
+              <div class="ac_link"><a href="/">다운받기</a></div>
+            </div>
+            <a href="/"><img src="images/icon_whale.png" class="ac_img"/></a>
+          </div>
+          <div class="area_col">
+            <div class="ac_content">
+              <div class="text_bold-13">프로젝트 꽃</div>
+              <div class="ac_link"><a href="/">바로가기</a></div>
+            </div>
+            <a href="/"><img src="images/icon_flower.png" class="ac_img"/></a>
+          </div>
         </div>
         <div class="bottom_box">
-            <ul>
-                <li><a href="/">회사소개</a></li>
-                <li><a href="/">인재채용</a></li>
-                <li><a href="/">제휴제안</a></li>
-                <li><a href="/">이용약관</a></li>
-                <li><a href="/">개인정보처리방침</a></li>
-                <li><a href="/">청소년보호정책</a></li>
-                <li><a href="/">네이버 정책</a></li>
-                <li><a href="/">고객센터</a></li>
-                <li><a href="/">&copy; NAVER Corp.</a></li>
-            </ul>
+          <ul>
+            <li><a href="/">회사소개</a></li>
+            <li><a href="/">인재채용</a></li>
+            <li><a href="/">제휴제안</a></li>
+            <li><a href="/">이용약관</a></li>
+            <li><a href="/">개인정보처리방침</a></li>
+            <li><a href="/">청소년보호정책</a></li>
+            <li><a href="/">네이버 정책</a></li>
+            <li><a href="/">고객센터</a></li>
+            <li><a href="/">&copy; NAVER Corp.</a></li>
+          </ul>
         </div>
-    </footer>
+      </footer>
 </body>
 </html>
